# comfyui-audio-processing

./: CHANGELOG.md  README.md  __init__.py  fb_nodes.py  io_nodes.py  plot_nodes.py  pyproject.toml  spect_nodes.py
workflows/filter bank/: linear-scale-spectrogram.json  mel-scale-spectrogram.json
workflows/spectrogram/: complex-valued-spectrogram.json  real-valued-spectrogram.json
workflows/waveform/: plot-waveform.json
