[project]
name = "comfyui-audio-processing"
description = "This plugin is compatible with the ComfyUI audio nodes."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/rhdunn/comfyui-audio-processing"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-audio-processing"
Icon = ""
