[project]
name = "comfyui-audio-processing"
description = "A collection of nodes for working with audio data."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/rhdunn/comfyui-audio-processing"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "rhdunn"
DisplayName = "comfyui-audio-processing"
Icon = ""
